Fix legend tag not inheriting color styles for inverse html examples on IE11

--- a/packages/design-system/src/styles/components/_FormLabel.scss
+++ b/packages/design-system/src/styles/components/_FormLabel.scss
@@ -1,6 +1,8 @@
 @import '../settings/index.scss';
 
 .ds-c-label {
+  // Correct color inheritance from `legend` elements in IE
+  color: inherit;
   display: block;
   font-size: $base-font-size;
   font-weight: $font-bold;
